<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total">Bill Total:</string>
    <string name="tip_percent">Tip %</string>
    <string name="custom">Custom</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="user_bill_total">Enter Bill Total</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="custom_percent">Custom</string>
    <string name="exit_button">Exit</string>
    <string name="output_tip_value">0.00</string>
    <string name="output_total_value">0.00</string>
</resources>
